[tool.poetry]
name = "star"
version = "0.1.0"
description = ""
authors = ["ğ•¯ğ–Šğ–’ğ–”ğ–“ <78769380+codegod100@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
extism = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
